build_err.log
> Task :clean

> Task :compileJava FAILED
C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\service\MutagenClassTracker.java:12: error: class PulseClassTracker is public, should be declared in a file named PulseClassTracker.java
public class PulseClassTracker implements IClassTracker {
       ^
Note: C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\service\PulseMixinService.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

[Incubating] Problems report is available at: file:///C:/Users/MW/Downloads/coding/Mutagen/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  Note: C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\service\PulseMixinService.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\service\MutagenClassTracker.java:12: error: class PulseClassTracker is public, should be declared in a file named PulseClassTracker.java
  public class PulseClassTracker implements IClassTracker {
         ^
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 1s
2 actionable tasks: 2 executed
